# Ide-Traffic

./: CMakeLists.txt  INSTALL_SFML.md  README.md  SETUP.md  build.bat  compile_project.bat  compile_without_sfml.bat  test_compile.bat
app/: main.cpp
app/core/: CMakeLists.txt  Collider.cpp  Collider.h  Component.h  GameObject.cpp  GameObject.h  RNG.cpp  RNG.h  Scene.cpp  Scene.h  Scheduler.cpp  Scheduler.h  Simulator.cpp  Simulator.h  Transform.cpp  Transform.h
app/editor/: CMakeLists.txt  EntityEditor.cpp  EntityEditor.h  MapEditor.cpp  MapEditor.h
app/io/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  JsonLoader.cpp  JsonLoader.h
app/render/: CMakeLists.txt  Renderer.cpp  Renderer.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h
app/runtime/: Application.cpp  Application.h  CMakeLists.txt  ThreadManager.cpp  ThreadManager.h
assets/: README.md
tests/: CMakeLists.txt
